# xscf

./: CMakeLists.txt  Makefile  README.md  basis_set.cc  basis_set.h  densitymatrix.h  hamiltonian-det.h  hamiltonian-spincsf.h  irrep_prod.h  matrix.cc  matrix.h  mointegrals.h  molecule.cc  molecule.h  naturalorbitals.h  readpsi3.cc  scf.cc  scf.h  xscf.cc
basis_set/: 3-21G.gbs  6-311++G_star_star.gbs  6-311G.gbs  6-311G_star_star.gbs  6-31G.gbs  6-31G_star_star.gbs  STO-6G.gbs  cc-pVDZ.gbs  cc-pVQZ.gbs  cc-pVTZ.gbs  test.gbs
include/: atom_labels.h  basis_set.h  diis.h  matrix.h  molecule.h  scf.h  xscf.h
old/: det.h  occ.h  read_input.h  readmointegrals.h  types.h
src/: basis_set.cc  diis.cc  matrix.cc  molecule.cc  scf.cc  xscf.cc
test_2Ne/: input.txt  output.txt
test_H2O/: #input.txt#  input.dat~  input.txt  output.txt
test_He/: STO-3G.gbs  input.dat~  input.txt  output.txt
test_Ne/: #input.#  input.dat~  input.txt  input.txt~  output.txt
