cmake_minimum_required (VERSION 2.6)
project (xscf)
find_package( BLAS REQUIRED )
find_package( LAPACK REQUIRED )
find_library ( LIBCINT_LIBRARY cint )
include_directories(${BLAS_INCLUDE_DIR})
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_BUILD_TYPE Debug)
include_directories(include)
file(GLOB SOURCES "src/*.cc")
add_executable(xscf ${SOURCES})
target_link_libraries (xscf m blas lapack ${BLAS_LIBRARIES} ${LIBCINT_LIBRARY})
